--- a/index.html
+++ b/index.html
@@ -1161,47 +1161,57 @@
                     <p>Developed an automated system that allows users to query data using natural language and receive instant, insightful responses. This project leverages advanced NLP techniques and integrates with various data sources to provide a seamless data exploration experience.</p>
                 </div>
                 <div class="project-card">
-                    <img src="https://placehold.co/600x400/0A0A0A/E0E0E0?text=Project+1" alt="Project 1">
+                    <img src="https://placehold.co/600x400/0A0A0A/E0E0E0?text=Predictive+Analytics+ML" alt="Predictive Analytics with Machine Learning">
+                    <h2>Predictive Analytics with Machine Learning</h2>
+                    <p>Designed and implemented a predictive analytics solution using various machine learning algorithms to forecast key business metrics. This project involved data preprocessing, model selection, training, and evaluation, providing actionable insights for strategic decision-making.</p>
+                </div>
+                <div class="project-card">
+                    <img src="https://placehold.co/600x400/0A0A0A/E0E0E0?text=Intelligent+Agent+AI" alt="Intelligent Agent for Data Automation">
+                    <h2>Intelligent Agent for Data Automation</h2>
+                    <p>Created an intelligent agent powered by AI to automate repetitive data tasks, including data collection, cleaning, and report generation. The agent leverages advanced AI techniques to learn from user interactions and adapt its behavior for improved efficiency.</p>
+                </div>
+                <div class="project-card">
+                    <img src="https://placehold.co/600x400/0A0A0A/E0E0E0?text=Live+Background+Changer" alt="Live Background Changer">
                     <h2>Live Background Changer</h2>
                     <p>This project allows users to dynamically change the background of a webpage in real-time. It utilizes JavaScript and CSS to provide a seamless and interactive user experience. Key features include color pickers, gradient options, and image uploads.</p>
                 </div>
                 <div class="project-card">
-                    <img src="https://placehold.co/600x400/0A0A0A/E0E0E0?text=Project+2" alt="Project 2">
+                    <img src="https://placehold.co/600x400/0A0A0A/E0E0E0?text=Pose+Detection+and+Tracking" alt="Pose Detection and Tracking">
                     <h2>Pose Detection and Tracking</h2>
                     <p>This project involves detecting and tracking human poses using computer vision techniques. It leverages machine learning models to identify key points on the human body and track movements in real-time. Technologies used include TensorFlow, OpenCV, and JavaScript.</p>
                 </div>
                 <div class="project-card">
-                    <img src="https://placehold.co/600x400/0A0A0A/E0E0E0?text=Project+3" alt="Project 3">
+                    <img src="https://placehold.co/600x400/0A0A0A/E0E0E0?text=Mall+Clustering+Project" alt="Mall Clustering Project">
                     <h2>Mall Clustering Project</h2>
                     <p>This project focuses on segmenting customers of a mall into different clusters based on their purchasing behavior. It uses clustering algorithms like K-means to identify distinct customer groups. Technologies used include Python, Pandas, scikit-learn, and Matplotlib for visualization. The project aims to help the mall management understand customer segments and tailor marketing strategies accordingly.</p>
                 </div>
                 <div class="project-card">
-                    <img src="https://placehold.co/600x400/0A0A0A/E0E0E0?text=Project+4" alt="Project 4">
+                    <img src="https://placehold.co/600x400/0A0A0A/E0E0E0?text=Hand+Landmarks+Tracking" alt="Hand Landmarks Tracking">
                     <h2>Hand Landmarks Tracking</h2>
                     <p>This project focuses on tracking hand landmarks using advanced computer vision techniques. It employs machine learning models to accurately detect and track key points on the hand in real-time. Technologies used include TensorFlow, OpenCV, and JavaScript. The project aims to enhance gesture recognition and interaction in various applications.</p>
                 </div>
                 <div class="project-card">
-                    <img src="https://placehold.co/600x400/0A0A0A/E0E0E0?text=Project+5" alt="Project 5">
+                    <img src="https://placehold.co/600x400/0A0A0A/E0E0E0?text=Covid+Analysis" alt="Covid Analysis">
                     <h2>Covid Analysis</h2>
                     <p>This project involves analyzing the impact of COVID-19 using data visualization techniques. It utilizes various data sources to provide insights into the spread and effects of the pandemic. Technologies used include Python, Pandas, and Matplotlib.</p>
                 </div>
                 <div class="project-card">
-                    <img src="https://placehold.co/600x400/0A0A0A/E0E0E0?text=Project+6" alt="Project 6">
+                    <img src="https://placehold.co/600x400/0A0A0A/E0E0E0?text=Customer+Analytics" alt="Customer Analytics">
                     <h2>Customer Analytics</h2>
                     <p>This project focuses on analyzing customer data to gain insights into customer behavior and preferences. It uses data mining and machine learning techniques to segment customers, predict churn, and identify key trends. Technologies used include Python, Pandas, scikit-learn, and Tableau for visualization.</p>
                 </div>
                 <div class="project-card">
-                    <img src="https://placehold.co/600x400/0A0A0A/E0E0E0?text=Project+7" alt="Project 7">
+                    <img src="https://placehold.co/600x400/0A0A0A/E0E0E0?text=IPL+Web+Scraping" alt="IPL Web Scraping">
                     <h2>IPL Web Scraping</h2>
                     <p>This project involves scraping data from IPL websites to gather statistics and insights. It uses Python and BeautifulSoup for web scraping, and Pandas for data manipulation and analysis. The project provides detailed reports and visualizations of IPL matches and player performances.</p>
                 </div>
                 <div class="project-card">
-                    <img src="https://placehold.co/600x400/0A0A0A/E0E0E0?text=Project+8" alt="Project 8">
+                    <img src="https://placehold.co/600x400/0A0A0A/E0E0E0?text=Loan+Approval+Web+App" alt="Loan Approval Web App">
                     <h2>Loan Approval Web App</h2>
                     <p>This project is a web application designed to automate the loan approval process. It uses machine learning algorithms to predict loan eligibility based on applicant data. Technologies used include Python, Flask, and scikit-learn. The app provides a user-friendly interface for both applicants and administrators.</p>
                 </div>
                 <div class="project-card">
-                    <img src="https://placehold.co/600x400/0A0A0A/E0E0E0?text=Project+9" alt="Project 9">
+                    <img src="https://placehold.co/600x400/0A0A0A/E0E0E0?text=Employee+Productivity+Analysis" alt="Employee Productivity Analysis">
                     <h2>Employee Productivity Analysis</h2>
                     <p>This project focuses on analyzing employee productivity using various metrics and data visualization techniques. It leverages data from multiple sources to provide insights into employee performance and productivity trends. Technologies used include Python, Pandas, and Matplotlib.</p>
                 </div>
@@ -1311,8 +1321,8 @@
             renderer.setSize(window.innerWidth, window.innerHeight);
             threeContainer.appendChild(renderer.domElement);
 
-            // Increased particle count and size for a denser galaxy effect
-            const particleCount = 2000;
+            // Particle count and size for a denser galaxy effect
+            const particleCount = 2000; 
             const geometry = new THREE.BufferGeometry();
             const positions = new Float32Array(particleCount * 3);
             const colors = new Float32Array(particleCount * 3);
@@ -1335,7 +1345,7 @@
             geometry.setAttribute('color', new THREE.BufferAttribute(colors, 3));
 
             const material = new THREE.PointsMaterial({
-                size: 1.0,
+                size: 1.0, 
                 vertexColors: true,
                 blending: THREE.AdditiveBlending,
                 transparent: true,
